# comfyui_LLM_party

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  LLM_Party for Local Models.json  LLM_Party for Omost（CN）.json  README.md  README_AR.md  README_CN.md  README_DE.md  README_ES.md  README_FR.md  README_JA.md  README_JP.md  README_KO.md  README_PT.md  README_RU.md  README_ZH.md  SECURITY.md  __init__.py  api.py  change_log.md  config.ini  config.ini.example  config.py  config_update.py  fast_api.py  fast_api_v2.py  fastapi.py  how_to_use_nodes  how_to_use_nodes.md  how_to_use_nodes_ZH.md  install.py  llm.py  mcp_config.json  pyproject.toml  requirements.txt  requirements_fixed.txt  setup_fastapi.bat  setup_fastapi_v2.bat  (+2 more)
.circleci/: config.yml
.github/workflows/: publish.yaml
KG/: test.csv  test.json  test.json.example  麦洛薇.json
custom_tool/: GOT-OCR2.py  Moderation.py  RSS.py  SQL.py  WeChat_Official.py  amap.py  amap_decode.py  amap_encode.py  arxiv.py  browser.py  chatTTS_node.py  custom_format.py  custom_personaV2.py  dall_e.py  discord_bot.py  discord_monitor.py  easyocr_function.py  ebd_tool.py  example_tool.py  extra_parameters.py  feishu_download.py  feishu_download_img.py  feishu_get_history_msg.py  feishu_send_msg.py  file_control.py  file_control_safe.py  file_exist.py  file_online_delete.py  file_online_storage.py  fish_audio.py  folder_clear.py  gpt_sovits.py  html2img.py  ic_lora.py  image2moreimage.py  image_hosting.py  img_lora.py  imges2imge.py  interrupt.py  json_extractor.py  (+30 more)
file/: README.md  README_ZH.md  README_ZH.txt  how_to_use_nodes_ZH.txt  party_iisue.md  story.json  test.csv  test.txt  test.xls  test.xlsx  量子永生教.json
janus/models/: clip_encoder.py  modeling_vlm.py  processing_vlm.py  siglip_vit.py  vq_model.py
janus/utils/: conversation.py  io.py
lib_omost/: canvas.py  memory_management.py  pipeline.py
model/bge-large-zh/: .gitattributes  config.json  config_sentence_transformers.json  configuration.json  modules.json
party-plugin/: background.js  content.js  manifest.json  popup.html  popup.js  styles.css
party-plugin/libs/: marked.min.js
persona/: FLUX提示词生成器.txt  GPT_DAN.txt  GPT_DAN_ZH.txt  HTML2IMG.txt  LLM工具制造机.txt  Yu-Gi-Oh游戏王.txt  canvas.txt  flux海报生成器.txt  o1草莓系统.json  omost.txt  stone.txt  tarot塔罗牌.txt  互动小说.txt  图片提示词生成器.txt  图片提示词生成器jsonout版.txt  汉语新解.txt  漫画manga.txt  知识图谱.txt  知识图谱csv版本.txt  知识图谱csv版本用户版.txt  知识图谱json版本用户版.txt  知识图谱neo4j版本.txt  知识图谱neo4j版本用户版.txt  麦洛薇.txt  麦洛薇稳定版.txt  麦洛薇自由版.txt
test/: 1.py  deepseek.py  mcp_test.py  openai_test.py  qwen.py
tools/: CosyVoice.py  KG.py  KG_csv.py  KG_neo4j.py  api_tool.py  arxiv.py  check_web.py  classify_function.py  classify_persona.py  clear_file.py  clear_model.py  custom_persona.py  dialog.py  dingding.py  end_work.py  excel.py  feishu.py  file_combine.py  file_conbine.py  flux_persona.py  get_time.py  get_weather.py  git_tool.py  image.py  interpreter.py  keyword.py  llamaindex.py  load_ebd.py  load_file.py  load_model_name.py  load_persona.py  logic.py  lorebook.py  new_interpreter.py  omost.py  search_web.py  show_text.py  smalltool.py  story.py  text2json.py  (+10 more)
web/: showtext.js  showtext_party.js
web/js/: botton_party.js  llm_api_loader.js  showtext_party.js
web/test/: botton_party.js
workflow/: AI办公室.json  GPT-4o.json  GPT-sovits.json  LLM Party 小红书文案生成.json  LLM_lora.json  LLM套娃.json  LLM工具制造机.json  LLM工具生成器.json  LLM接入SD.json  LLM额外参数eg_JSON_OUT.json  Local LLM + Flux(Auto Clear GPU).json  clear_model.json  deepseek-janus-pro.json  discord_bot.json  graphRAG_neo4j.json  lorebook.json  minicpm-v-ollama.json  o1生成网页.json  o1草莓复现.json  ollama.json  qwen-vl.json  start_with_GGUF.json  start_with_LLM_API_for_SD.json  start_with_LLM_api.json  start_with_LLM_local.json  start_with_LVM.json  start_with_MCP.json  start_with_OMOST.json  start_with_VLM_API_for_SD.json  start_with_VLM_local.json  start_with_aisuite.json  start_with_gemini.json  start_with_llava.json  start_with_ollama_minicpm_for_SD.json  start_with_qwen_vl_local_for_SD.json  互动小说.json  互动小说：量子永生教.json  任意API接入.json  发送到企业微信.json  图床.json  (+43 more)
workflow_api/: X.json  draw.json  fastapi.json  test_api.json  vtuber_api.json  wx_api.json  写诗.json  测试画画app.json  绘图app.json  麦洛薇.json
workflow_tutorial/: LLM Party for FLUX 炉石传说抽卡.json  LLM Party for FLUX提示词五合一（炉石&游戏王&塔罗牌&海报&漫画）一键生成.json  LLM Party for Google Search （ComfyUI联网搜索功能）.json  LLM Party for GraphRAG 知识图谱.json  LLM Party for In-Context-LoRA 自动打标.json  LLM Party for Multi-RAG 多知识库分别调用.json  LLM Party——提示词工程复现o1草莓模型.json  LLM party for 汉语新解（中译中ComfyUI版）.json  LLM_Party For Polished Prompt.json  LLM_Party for API Models.json  LLM_Party for FLUX Image2Image & Text2Image.json  LLM_Party for Llama3.2 -Vision（带记忆）.json  LLM_Party for Local Models.json  LLM_Party for Omost+FLUX.json  LLM_Party for Omost.json  LLM_Party for Omost（CN）.json  LLM_Party for System Prompt-Persona（翻译+人格+flux提示词+分类器+自定义面具）.json  Mini Party for Flux 一键式文生图&图生图.json  Mini Party for Flux自动打标.json  Mini Party for SD提示词生成器.json  Mini Party for SD自动打标.json  Mini Party for Translate.json  Mini Party for 摘要生成器.json  Mini Party for 故事生成器.json  Mini Party for 长文纠错器.json  Mini Party for 高级OCR.json
