[project]
name = "comfyui_llm_party"
description = "A set of block-based LLM agent node libraries designed for ComfyUI.This project aims to develop a complete set of nodes for LLM workflow construction based on comfyui. It allows users to quickly and conveniently build their own LLM workflows and easily integrate them into their existing SD workflows."
version = "1.2.0"
license = {file = "LICENSE"}
dependencies = [
    "beautifulsoup4",
    "docx2txt",
    "langchain",
    "langchain_community",
    "langchain_text_splitters",
    "openai",
    "openpyxl",
    "pandas",
    "pytz",
    "Requests",
    "xlrd",
    "faiss-cpu",
    "websocket-client",
    "streamlit",
    "virtualenv",
    "tiktoken",
    "transformers",
    "transformers_stream_generator",
    "optimum",
    "pdfplumber",
    "wikipedia",
    "arxiv",
    "bitsandbytes",
    "accelerate",
    "fastapi",
    "py-cpuinfo",
    "diskcache",
    "requests_toolbelt",
    "tabulate",
    "charset_normalizer",
    "tenacity",
    "cpm_kernels",
    "pydub",
    "keyboard",
    "sounddevice",
    "neo4j",
    "soundfile",
    "langchain_openai",
    "sentence_transformers",
    "uvicorn",
    "google-generativeai",
    "llama_index",
    "html2image",
    "markdown",
    "selenium",
    "librosa",
    "ffmpeg-python",
    "moviepy",
    "html5lib",
    "easyocr",
    "feedparser",
    "psutil",
    "verovio",
    "mdtex2html",
    "markdownify",
    "srt",
    "peft"
]

[project.urls]
Repository = "https://github.com/heshengtao/comfyui_LLM_party"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "heshengtao"
DisplayName = "comfyui_LLM_party"
Icon = ""

[tool.black]
line-length = 120
preview = true

[tool.isort]
profile = "black"