[project]
name = "comfyui_llm_party"
description = "A set of block-based LLM agent node libraries designed for ComfyUI.This project aims to develop a complete set of nodes for LLM workflow construction based on comfyui. It allows users to quickly and conveniently build their own LLM workflows and easily integrate them into their existing SD workflows."
version = "only-api-1.0.0"
license = {file = "LICENSE"}
dependencies = [
    "beautifulsoup4",
    "docx2txt",
    "langchain",
    "langchain_community",
    "langchain_text_splitters",
    "openai",
    "openpyxl",
    "pandas",
    "pytz",
    "Requests",
    "xlrd",
    "faiss-cpu",
    "websocket-client",
    "streamlit",
    "virtualenv",
    "tiktoken",
    "optimum",
    "pdfplumber",
    "wikipedia",
    "arxiv",
    "bitsandbytes",
    "accelerate",
    "fastapi",
    "py-cpuinfo",
    "diskcache",
    "requests_toolbelt",
    "tabulate",
    "charset_normalizer",
    "tenacity",
    "cpm_kernels",
    "pydub",
    "keyboard",
    "sounddevice",
    "neo4j",
    "soundfile",
    "langchain_openai",
    "sentence_transformers",
    "uvicorn",
    "llama_index",
    "html2image",
    "markdown",
    "selenium",
    "librosa",
    "ffmpeg-python",
    "html5lib",
    "easyocr",
    "feedparser",
    "psutil",
    "verovio",
    "mdtex2html",
    "markdownify",
    "srt",
    "peft",
    "scipy",
    "json-repair",
    "redis",
    "aisuite[all]",
    "fish_audio_sdk",
    "httpx",
    "mcp",
    "qwen-vl-utils[decord]",
    "attrdict",
    "docstring_parser",
    "langchain_ollama"
]

[project.urls]
Repository = "https://github.com/heshengtao/comfyui_LLM_party"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "heshengtao"
DisplayName = "comfyui_LLM_party"
Icon = ""

[tool.black]
line-length = 120
preview = true

[tool.isort]
profile = "black"