[project]
name = "comfyui_llm_party"
description = "A set of block-based LLM agent node libraries designed for ComfyUI.This project aims to develop a complete set of nodes for LLM workflow construction based on comfyui. It allows users to quickly and conveniently build their own LLM workflows and easily integrate them into their existing SD workflows."
version = "1.4.1"
license = {file = "LICENSE"}
dependencies = [
    "beautifulsoup4",
    "docx2txt",
    "langchain",
    "langchain-community",
    "langchain-text-splitters",
    "openai>=1.57.4",
    "openpyxl",
    "pandas",
    "pytz",
    "requests",
    "xlrd",
    "faiss-cpu",
    "websocket-client",
    "streamlit",
    "virtualenv",
    "tiktoken",
    "transformers",
    "transformers-stream-generator",
    "optimum",
    "pdfplumber",
    "wikipedia",
    "arxiv",
    "bitsandbytes",
    "accelerate",
    "fastapi",
    "py-cpuinfo",
    "diskcache",
    "requests-toolbelt",
    "tabulate",
    "charset-normalizer",
    "tenacity",
    "cpm-kernels",
    "pydub",
    "keyboard",
    "sounddevice",
    "neo4j",
    "soundfile",
    "langchain-openai",
    "sentence-transformers",
    "uvicorn",
    "google-generativeai",
    "llama-index",
    "html2image",
    "markdown",
    "selenium",
    "librosa",
    "ffmpeg-python",
    "moviepy",
    "html5lib",
    "easyocr",
    "feedparser",
    "psutil",
    "verovio",
    "mdtex2html",
    "markdownify",
    "srt",
    "peft",
    "scipy>=1.15.2",
    "json-repair>=0.44.0",
    "redis>=5.3.0",
    "aisuite[all]>=0.1.11",
    "fish-audio-sdk>=2025.4.2",
    "httpx<=0.27.2",
    "mcp>=1.6.0",
    "qwen-vl-utils[decord]>=0.0.11",
    "attrdict>=2.0.1",
    "docstring-parser>=0.16",
    "langchain-ollama>=0.3.2",
    "timm>=1.0.15",
]

[project.urls]
Repository = "https://github.com/heshengtao/comfyui_LLM_party"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "heshengtao"
DisplayName = "comfyui_LLM_party"
Icon = ""

[tool.black]
line-length = 120
preview = true

[tool.isort]
profile = "black"
